loopdowhile.Poucet2.scala.error
Compilation error:
Poucet2:5: error: ')' expected but 'if' found.
      if (isOverBaggle==true) {
      ^Poucet2:8: error: 'while' expected but ')' found.
  forward()) while (crossing()==false);
           ^Poucet2:15: error: '(' expected but '}' found.
} 
^